--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^9.0.0",
-    "@nestjs/core": "^9.0.0",
+    "@nestjs/common": "^9.4.3",
+    "@nestjs/core": "^9.4.3",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/schedule": "^4.0.0",
+    "@types/node-cron": "^3.0.11",
     "class-validator": "^0.14.0",
     "node-cron": "^3.0.3",
     "reflect-metadata": "^0.1.13",
